Change section capitalisation

--- a/LaTeX/ellipticdefinitions.tex
+++ b/LaTeX/ellipticdefinitions.tex
@@ -39,7 +39,7 @@ Before we go into more detail on elliptic curves, we require an important theore
 This is \emph{Bézout's theorem}, which is a fundamental result in projective geometry.
 Each assumption of Bézout's theorem is important, as each is required for the theorem to hold.
 This is one reason why we take the base field $k$ of affine and projective space to be $\C$.
-\subsubsection{The Addition Law on Elliptic Curves}
+\subsubsection{The addition law on elliptic curves}
 Our interest in elliptic curves is mainly concentrated on a special property of theirs.
 It is possible to turn the set of points of an elliptic curve $E$ into a group by introducing a special addition law that satisfies all of the group axioms.
 We do not prove this in this document but direct readers to \cite{silverman2009}.
@@ -66,7 +66,7 @@ This can be remedied, though, by defining the elliptic curve addition law as fol
 	The flex $\pai$ acts as the identity element of the group.
 \end{theorem}
 This is known as Poincaré's theorem.
-\subsubsection{Canonical Forms of Elliptic Curves}
+\subsubsection{Canonical forms of elliptic curves}
 As we have introduced them so far, elliptic curves have no specific form, other than being defined by a homegeneous polynomial of degree three.
 The following theorem is useful when working with elliptic curves.
 \begin{theorem}
