--- a/LaTeX/lenstraalgorithm.tex
+++ b/LaTeX/lenstraalgorithm.tex
@@ -22,7 +22,7 @@ and then calculate $a^{500} = A_2 \times A_4 \times A_5 \times A_6 \times A_7 \t
 \end{definition}
 As the numbers involved grow larger, the time savings over the trivial method become enormous, as this is an $O(\log_2(k))$ algorithm, and it is this algorithm which we shall use in our arithmetic.
 
-\subsubsection{Fermat's Little Theorem}
+\subsubsection{Fermat's little theorem}
 Fermat's little theorem is a useful result in number theory that can (sometimes) be used to prove that a number is composite.
 \begin{theorem}
 	If $p$ is prime, then
