--- a/LaTeX/projectivedefinitions.tex
+++ b/LaTeX/projectivedefinitions.tex
@@ -1,4 +1,4 @@
-\subsubsection{Affine Space and Affine Curves}
+\subsubsection{Affine space and affine curves}
 The main object of interest in this subsection is the projective plane.
 Before we introduce it, though, we begin with a prerequisite definition.
 
@@ -36,7 +36,7 @@ The distinction of objects remains, though, and this is purely notational.
 More points on notation are that in the affine plane, instead of $x_1$ and $x_2$, we write $x$ and $y$, lowercase.
 We also write polynomials as lowercase letters $f$, $g$ etc.
 The reason for this will be explained shortly.
-\subsubsection{Projective Space}
+\subsubsection{Projective space}
 Now that affine space has been introduced, we are ready to introduce projective $n$-space $\pn(k)$, and with that, the projective plane $\pn[2](k)$.
 
 The projective plane is an idea that grew out of the renaissance study of perspective in art.
@@ -102,7 +102,7 @@ Then we can define
 $$\pn = \alpha_n(\an(k)) \cup \beta_n(\pn[n-1])$$
 Effectively, we have that $\alpha_n$ is the embedding of affine space in $\pn$ and $\beta_n$ represents the points at infinity of $\pn$.
 Notice that the image of $\beta_n$ will always give valid homogeneous coordinates, as we removed zero from $\pn[0]$, and therefore at least one of the first $n$ coordinates will be nonzero.
-\subsubsection{Homogenisation and Dehomogenisation}
+\subsubsection{Homogenisation and dehomogenisation}
 Now that projective space has been introduced, we establish how to transition between affine space $\an$ and projective space $\pn$.
 The second construction of projective space is the most enlightening in this regard.
 The map $\alpha_n$ gives the image of a point $p=(x_1,\ldots,x_n)\in\an$ in $\pn$ as $[x_1,\ldots,x_n,1]$, and this process is known as \emph{homogenisation}.
@@ -167,7 +167,7 @@ In this way, it is possible to `see' the affine part of projective curves $F$ by
 The reverse is also true, as the parallel lines given by $2x - 3y + 1 = 0$ and $2x - 3y - 3 = 0$ in $\an[2]$, intersect in the projective plane at the point [3,-2,0].
 This is because, when homogenised with respect to $Z$, the curves are given by $2X - 3Y + Z = 0$ and $2X - 3Y - 3Z = 0$, which are clearly satisfied by $[X,Y,Z] = [3,2,0]$.
 As we would expect, this is a point at infinity, since $Z=0$.
-\subsubsection{Projective Curves and Projective Geometry}
+\subsubsection{Projective curves and projective geometry}
 Now that the concepts of homogenisation and dehomogenisation have been established, we introduce a few more ideas necessary for understanding the main subject matter.
 From now on, we also limit ourselves to the projective plane $\pn[2]$.
 
