--- a/LaTeX/finiteelliptic.tex
+++ b/LaTeX/finiteelliptic.tex
@@ -31,7 +31,7 @@ The point at infinity $\pai$ remains on the curve at $[0,1,0]$.
 	\caption{The curve $y^2 = 4x^3 + 2x + 1$ over $\fp[29]$}
 	\label{finitecurve}
 \end{figure}
-\subsubsection{Addition Formulae for Points}
+\subsubsection{Addition formulae for points}
 For elliptic curves over a finite field $\mathbb{F}_p$, when adding points $(x_1,y_1) + (x_2,y_2) = (x',y')$,
 $$x'=\lambda^2 - a - x_1 - x_2,\quad y' = \lambda x_1 -\lambda x' - y_1 $$
 where $\lambda = \frac{y_2-y_1}{x_2-x_1}$ if $x_1\neq x_2$ or $\lambda=\frac{3x_1^2 + 2ax_1 + b}{2y_1}$ otherwise.
