Top to bottom edit of document
As suggested by the short message, this commit contains the last few
hours of work for the night. This was done by reading the document start
to finish and adding in and/or editing sections as they were
encountered.

Changes to be committed:
modified:   dissertation.tex
modified:   ellipticdefinitions.tex
modified:   finiteelliptic.tex
modified:   h-w.tex
modified:   lenstraalgorithm.tex
modified:   points.tex
modified:   projectivedefinitions.tex

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -14,10 +14,10 @@
 \section*{Motivation}
 \addcontentsline{toc}{section}{Motivation}
 \input{motivation.tex}
-\nocite{*}
 \clearpage
 
 \section{Prerequisites}
+\label{prerequisite-section}
 \subsection{Finite fields}
 \input{finitefieldsdefinitions.tex}
 \subsection{The projective plane}
@@ -27,7 +27,8 @@
 \clearpage
 
 \section{Theory}
-\subsection{Rational points of elliptic curves}
+\label{theory-section}
+\subsection{Elliptic curves over finite fields}
 \input{finiteelliptic.tex}
 \subsection{The number of points on an elliptic curve}
 \input{points.tex}
@@ -36,6 +37,7 @@
 \clearpage
 
 \section{Discussion}
+\label{discussion-section}
 \subsection{Example RSA decryption}
 \input{rsa.tex}
 \subsection{Elliptic curve cryptography}
