--- a/LaTeX/projectivedefinitions.tex
+++ b/LaTeX/projectivedefinitions.tex
@@ -20,8 +20,8 @@ In affine $n$-space, it is possible to define \emph{affine curves} in the follow
 	$$V(f) = \{(x_1,\ldots,x_n)\in\an(k) | f(x_1,\ldots,x_n)=0\}$$
 \end{definition}
 \Cref{affinecurveexample} shows an example of an affine curve.
+Note that, when plotting affine curves, we only plot the real part of them, as they may have points with complex coordinates.
 
-% unfinished diagram
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[scale=0.3]{../Figures/affineexample.jpg}
@@ -30,7 +30,7 @@ In affine $n$-space, it is possible to define \emph{affine curves} in the follow
 \end{figure}
 
 It is important to distinguish the two objects $V(f)$ and $f$, as $f$ is simply a polynomial, whereas $V(f)$ is the set of points that are a solution to a polynomial \emph{equation} $f(x_1,\ldots,x_n)=0$.
-However, for convenience, we write the curve $V(f)$ as its defining polynomial equation $f(x_1,\ldots,x_n)=0$, when it is clear to do so.
+However, for convenience, we write the curve $V(f)$ as its defining polynomial equation $f(x_1,\ldots,x_n)=0$, when it is clear to do so, or even refer to just the curve $f$.
 The distinction of objects remains, though, and this is purely notational.
 
 More points on notation are that in the affine plane, instead of $x_1$ and $x_2$, we write $x$ and $y$, lowercase.
@@ -131,14 +131,23 @@ In practice, this resembles `topping up' the monomials with an extra variable as
 So the inhomogeneous polynomial $17x^5 + 12x^2y + 2$ discussed earlier can be homogenised as $17X^5 + 12X^2YZ^2 + 2Z^5$.
 The reverse transition can be made also, simply by letting $f = f(x_1,\ldots,x_n) = F(x_1,\ldots,x_n,1)$, which looks like simply taking out the extra variable.
 
-% Move this to nearer the start?
 When writing homogeneous polynomials, we use uppercase letters to distinguish them from affine variables and make the context clear.
 We also use $X$, $Y$ and $Z$ (and also $x$ and $y$) as the three variables when dealing with the projective plane (uppercase) and the affine part thereof (lowercase).
 
 To summarise, it is possible to move to (homogenisation) and from (dehomogenisation) the projective plane with regards to both points and polynomials.
 A point $(x,y)\in\an[2]$ can be homogenised as $[x,y,1]\in\pn[2]$, and $[X,Y,Z]$ dehomogenised as $(X/Z,Y/Z)$.
-A polynomial $f(x,y)$ can be homogenised as $F(X,Y,Z) = Z^d f(x/Z,y/Z)$, and $F(X,Y,Z)$ dehomogenised as $f(x,y) = F(x,y,1)$.
-In this way, it is possible to `see' the affine part of projective curves $F$ by dehomogenising $F$ and looking at the resultant affine curve $f$.
+A polynomial $f(x,y)$ can be homogenised as $F(X,Y,Z)$ by adding powers of $Z$ to each monomial as appropriate, and $F(X,Y,Z)$ dehomogenised as $f(x,y) = F(x,y,1)$.
+\subsubsection{Projective curves and projective geometry}
+Now that the concepts of homogenisation and dehomogenisation have been established, we introduce a few more ideas necessary for understanding the main subject matter.
+From now on, we also limit ourselves to the projective plane $\pn[2]$.
+
+\begin{definition}
+	A projective curve is the set of points defined by a \emph{homogeneous} polynomial equation $F(X_1,X_2,\ldots,X_n) = 0$.
+	When discussing the projective plane $\pn[2]$, we write $F(X,Y,Z) = 0$.
+	The degree of a curve is the degree of the polynomial in the defining equation.
+\end{definition}
+For example, the polynomial equations $X^3-YZ^2=0$, $13X^2Z + Y^3 + 4XYZ = 0$ and $Z^2 + \frac{1}{2}Y^2 = 0$ all define projective curves in $\pn[2]$.
+The first two have degree 3, the third, degree 2.
 
 \begin{figure}[htbp]
 	\centering
@@ -164,28 +173,17 @@ In this way, it is possible to `see' the affine part of projective curves $F$ by
 	\caption{The intersection of $2x - 3y + 1 = 0$ and $2x - 3y - 3 = 0$}
 	\label{euclidean-intersection}
 \end{figure}
-The reverse is also true, as the parallel lines given by $2x - 3y + 1 = 0$ and $2x - 3y - 3 = 0$ in $\an[2]$, intersect in the projective plane at the point [3,-2,0].
+While it is not possible to directly plot projective curves, as they contain points with complex coordinates and points at infinity in the projective plane, it is possible to see the affine part of projective curves $F$ by dehomogenising $F$ and looking at the resultant affine curve $f$.
+The reverse is also true, and the parallel lines given by $2x - 3y + 1 = 0$ and $2x - 3y - 3 = 0$ in $\an[2]$ intersect in the projective plane at the point [3,-2,0].
 This is because, when homogenised with respect to $Z$, the curves are given by $2X - 3Y + Z = 0$ and $2X - 3Y - 3Z = 0$, which are clearly satisfied by $[X,Y,Z] = [3,2,0]$.
 As we would expect, this is a point at infinity, since $Z=0$.
-\subsubsection{Projective curves and projective geometry}
-Now that the concepts of homogenisation and dehomogenisation have been established, we introduce a few more ideas necessary for understanding the main subject matter.
-From now on, we also limit ourselves to the projective plane $\pn[2]$.
-
-\begin{definition}
-	A projective curve is the set of points defined by a \emph{homogeneous} polynomial equation $F(X_1,X_2,\ldots,X_n) = 0$.
-	When discussing the projective plane $\pn[2]$, we write $F(X,Y,Z) = 0$.
-	The degree of a curve is the degree of the polynomial in the defining equation.
-\end{definition}
-For example, the polynomial equations $X^3-YZ^2=0$, $13X^2Z + Y^3 + 4XYZ = 0$ and $Z^2 + \frac{1}{2}Y^2 = 0$ all define projective curves in $\pn[2]$.
-% graphics of these curves?
-The first two have degree 3, the third, degree 2.
-
+This is illustrated in \cref{euclidean-intersection}.
 \begin{definition}
 	Let $F$ be a curve in $\pn[2]$ and $P=[a,b,c]$ be a point on $F$.
 	Let $L$ be a line through $P$ with parametrisation
 	$$\varphi(S,T) = SP + TQ = [Sa+Tu,Sb+Tv,Sc+Tw]$$
 	for another point $Q$ on $L$.
-	The \emph{intersection multiplicity} of $L$ and $F$ at $P$ is the multiplicity of $\varphi(1,0)$ as a solution of $F \circ \varphi = 0$, that is, the largest index $i$ of $T$ such that $T^i$ is a factor of $F \circ \varphi = 0$
+	The \emph{intersection multiplicity} of $L$ and $F$ at $P$ is the multiplicity of $\varphi(1,0)$ as a solution of $F \circ \varphi = 0$, that is, the largest index $i$ such that $T^i$ is a factor of $F \circ \varphi = 0$
 	The intersection is \emph{multiple} if the intersection multiplicity is greater than one, else it is \emph{regular}.
 	\label{intersection-multiplicity}
 \end{definition}
@@ -193,14 +191,14 @@ The concept of intersection multiplicity appears frequently in projective geomet
 
 We give an example of explicitly calculating the intersection multiplicity between the curve $F: YZ^2-X^3=0$ and the line $Y=0$ at the point $P = [0,0,1]$.
 Let $Q = [1,0,1]$ such that $L$ has the parametrisation
-$$L : [S,T] \mapsto [T,0,S].$$
-Then $F(T,0,S) = 0\times S^2 - T^3 = -T^3$, and since $T^3$ is a factor, the intersection has multiplicity 3.
+$$L : [S,T] \mapsto [T,0,S+T].$$
+Then $F(T,0,S+T) = 0 (S+T)^2 - T^3 = -T^3$, and since $T^3$ is a factor, the intersection has multiplicity 3.
 \begin{definition}
 	A singular point on a curve $F$ is a point $P$ where all partial derivatives $F_X$, $F_Y$ and $F_Z = 0$.
 	An alternative characterisation is that the intersection multiplicity of a line and $F$ at $P$ is always greater than one.
 	A point that is not a singular point is called a regular point.
 \end{definition}
-Two good examples of projective curves with singular points are provided by the \emph{cusp} $C : Y^2Z - X^3$ and the \emph{node} $N : Y^2Z - X^3 - X^2Z$, which are illustrated in \cref{cuspandnode}.
+Two fundamental examples of projective curves with singular points are provided by the \emph{cusp} $C : Y^2Z - X^3$ and the \emph{node} $N : Y^2Z - X^3 - X^2Z$, which are illustrated in \cref{cuspandnode}.
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[scale=0.25]{../Figures/cusp.jpg}
