Sweeping changes and edits

--- a/LaTeX/ellipticdefinitions.tex
+++ b/LaTeX/ellipticdefinitions.tex
@@ -69,6 +69,7 @@ This can be remedied, though, by defining the elliptic curve addition law as fol
 	The flex $\pai$ acts as the identity element of the group.
 \end{theorem}
 This is known as Poincaré's theorem.
+Note that \cref{flex-existence} ensures that there will be a flex on the curve we can take to be $\pai$.
 \begin{proof}
 	Let $P,Q,R \in E$.
 	We have
