--- a/LaTeX/finitefieldsdefinitions.tex
+++ b/LaTeX/finitefieldsdefinitions.tex
@@ -1,6 +1,6 @@
 \subsubsection{Finite fields}
 \begin{definition}
-	A field is a commutative, unital ring in which every non-zero element is invertible.
+	A field is a commutative, unital ring in which every non-zero element is invertible.\cite{322-lectures}
 \end{definition}
 Recall the group $\zn$, the group of integers modulo some natural number $n$.
 For a given $n$, we have already seen that we can make $\zn$ a ring by defining the natural multiplication law by $\widehat{a} \times \widehat{b} = \widehat{ab}$.
@@ -18,7 +18,6 @@ The reason this is true is obvious when considering inverses; if we attempt to m
 \end{align*}
 Therefore, $\zn[4]$ fails to meet the criteria for a field, since $2\neq 0$ has no inverse.
 
-% Paragraph on more complicated finite fields - should maybe do a more interesting field?
 It should be noted, though, that it is possible to construct a field with four elements.
 More generally, it is possible to construct finite fields $\fp[p^e]$ of order $p^e$, with $p$ prime and $e \in \N$.
 This is done by taking a quotient of the ring $\fp[p] [X]$ (the ring of polynomials in the indeterminate $X$ with coefficients in $\fp$) by an irreducible polynomial $F$ of degree $e$.
