--- a/LaTeX/h-w.tex
+++ b/LaTeX/h-w.tex
@@ -2,7 +2,7 @@
 % Add in intuitive proof and refer
 
 \begin{theorem}
-	For an elliptic curve $E: y^2 = f(x)$ over a finite field $\fp$, the number of points on $E = |E(\fp)| = p + 1 + \epsilon$, where $|\epsilon| \leq 2\sqrt{p}$.
+	For an elliptic curve $E: y^2 = f(x)$ over a finite field $\fp$, the number of points on $E = |E(\fp)| = p + 1 + \epsilon$, where $|\epsilon| \leq 2\sqrt{p}$.\cite{tate2013}
 \end{theorem}
 This is the statement of Hasse's original result, as it pertains to elliptic curves.
 The generalisation comes from introducing the genus $g$ and allowing $F$ to be any curve, so that the theorem reads $|F(\fp)| = p + 1 + \epsilon$, where $|\epsilon| \leq 2g\sqrt{p}$.
