--- a/LaTeX/master.bib
+++ b/LaTeX/master.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Will Bolton at 2016-04-21 15:41:51 +0100 
+%% Created for Will Bolton at 2016-04-22 10:04:42 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{322-lectures,
+	Author = {Dirk Zeindler},
+	Date-Added = {2016-04-22 08:37:33 +0000},
+	Date-Modified = {2016-04-22 08:39:42 +0000},
+	Howpublished = {Lancaster University Lecture Notes},
+	Month = {October},
+	Title = {MATH322: Rings, Fields and Polynomials},
+	Year = {2014}}
 
 @inproceedings{pollard1974,
 	Author = {Pollard, John M},
