--- a/LaTeX/motivation.tex
+++ b/LaTeX/motivation.tex
@@ -2,7 +2,7 @@ The main topic of this dissertation is cubic curves over finite fields, and in o
 Therefore, this document is split into three sections.
 \Cref{prerequisite-section} covers the necessary prerequisite material as mentioned before.
 Since this material is not the main focus of the document, some of the lengthier or more unenlightening proofs are not included, and the reader is instead provided with a reference for where they can find a proof and learn more about the topic.
-The majority of the material in the finite fields subsection comes from \cite{111-lectures}, and the remainder of the section comes largely from \cite{323-lectures} and \cite{bix2006}, with \cite{silverman2009} also being a useful resource.
+The majority of the material in the finite fields subsection comes from \cite{111-lectures,322-lectures}, and the remainder of the section comes largely from \cite{323-lectures} and \cite{bix2006}, with \cite{silverman2009} also being a useful resource.
 
 \Cref{theory-section} is the main section and is devoted to cubic curves over finite fields.
 We establish some fundamental theoretical results in the area and then describe Lenstra's algorithm, which is a number-theoretical factorisation algorithm.
@@ -10,3 +10,6 @@ The main resources for this section were \cite{tate2013} and \cite{silverman2009
 
 The final section, \cref{discussion-section}, contains a brief discussion of the two main applications of the material from the previous chapter.
 The discussion of RSA is motivated both by lenstra's algorithm from \cite{lenstra1987}, \cite{tate2013} and \cite{menezes1996}, and the discussion of elliptic curve cryptography is mainly due to \cite{tate2013}.
+
+To facilitate understanding, some figures have been included in the document.
+\Cref{projective-parallel,euclidean-intersection} were created in Ti\textit{k}Z, \cref{affinecurveexample,cuspandnode} were created with OS X's \emph{Grapher} app, \cref{ellipticaddition} was made using \emph{Geogebra} and \cref{finitecurve} was plotted using \textsf{R}.
