--- a/LaTeX/projectivedefinitions.tex
+++ b/LaTeX/projectivedefinitions.tex
@@ -1,6 +1,6 @@
 \subsubsection{Affine space and affine curves}
 The main object of interest in this subsection is the projective plane.
-Before we introduce it, though, we begin with a prerequisite definition.
+Before we introduce it, though, we begin with a prerequisite definition from \cite{323-lectures}.
 
 \begin{definition}
 	Let $k$ be a field.
@@ -208,8 +208,8 @@ Two fundamental examples of projective curves with singular points are provided 
 \end{figure}
 We can see that the point $[0,0,1]$ (the origin in the affine plane) is a singular point on both curves, since
 \begin{alignat*}{2}
-	&C_X = -3X^2,\qquad &&N_X = - 3X^2 - 2XZ\\
-	&C_Y = 2YZ,\qquad &&N_Y = 2YZ\\
+	&C_X = -3X^2,\qquad &&N_X = - 3X^2 - 2XZ,\\
+	&C_Y = 2YZ,\qquad &&N_Y = 2YZ,\\
 	&C_Z = Y^2,\qquad &&N_Z = Y^2 -X^2,
 \end{alignat*}
 and all partial derivatives vanish at $[0,0,1]$.
