--- a/LaTeX/master.bib
+++ b/LaTeX/master.bib
@@ -58,7 +58,7 @@
 	Number = {1},
 	Pages = {273--307},
 	Publisher = {Springer},
-	Title = {La conjecture de Weil. I},
+	Title = {La conjecture de {Weil}. {I}},
 	Volume = {43},
 	Year = {1974}}
 
