--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -9,7 +9,7 @@
 \begin{document}
 \begin{titlepage}
 	\centering
-	% \includegraphics[width=0.15\textwidth]{example-image-1x1}\par\vspace{1cm}
+	\includegraphics[width=0.15\textwidth]{../Figures/logo.jpg}\par\vspace{1cm}
 	{\scshape\LARGE Lancaster University \par}
 	\vspace{1cm}
 	{\scshape\Large MSci Mathematics Dissertation\par}
