Modify date to reflect hand-in correctly

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -24,7 +24,7 @@
 	\vfill
 
 % Bottom of the page
-	{\large \today\par}
+	{\large 22nd April 2016\par}
 \end{titlepage}
 \tableofcontents
 \clearpage
